Fix compliance report summary style bug (#4356)
This commit fixes styling bug where the report summary table was growing outside of its parent container and causing a horizontal scrollbar.

--- a/components/automate-ui/src/app/pages/+compliance/+reporting/reporting.component.scss
+++ b/components/automate-ui/src/app/pages/+compliance/+reporting/reporting.component.scss
@@ -193,6 +193,7 @@ chef-subheading {
     background: $chef-white;
 
     table {
+      width: 50%;
       flex-grow: 1;
       flex-basis: 50%;
       font-size: 14px;
